name:            yesod-form
version:         1.1.3
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Form handling support for Yesod Web Framework
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Form handling support for Yesod Web Framework

library
    build-depends:   base                  >= 4        && < 5
                   , yesod-core            >= 1.1      && < 1.2
                   , yesod-persistent      >= 1.1      && < 1.2
                   , time                  >= 1.1.4
                   , hamlet                >= 1.1      && < 1.2
                   , shakespeare-css       >= 1.0      && < 1.1
                   , shakespeare-js        >= 1.0      && < 1.1
                   , persistent            >= 1.0      && < 1.1
                   , template-haskell
                   , transformers          >= 0.2.2    && < 0.4
                   , data-default
                   , xss-sanitize          >= 0.3.0.1  && < 0.4
                   , blaze-builder         >= 0.2.1.4  && < 0.4
                   , network               >= 2.2
                   , email-validate        >= 0.2.6    && < 0.3
                   , bytestring            >= 0.9.1.4
                   , text                  >= 0.9      && < 1.0
                   , wai                   >= 1.3      && < 1.4
                   , containers            >= 0.2
                   , blaze-html            >= 0.5      && < 0.6
                   , blaze-markup          >= 0.5.1    && < 0.6
                   , attoparsec            >= 0.10     && < 0.11
                   , crypto-api            >= 0.8      && < 0.11

    exposed-modules: Yesod.Form
                     Yesod.Form.Class
                     Yesod.Form.Types
                     Yesod.Form.Functions
                     Yesod.Form.Input
                     Yesod.Form.Fields
                     Yesod.Form.Jquery
                     Yesod.Form.Nic
                     Yesod.Form.MassInput
                     Yesod.Form.I18n.English
                     Yesod.Form.I18n.Portuguese
                     Yesod.Form.I18n.Swedish
                     Yesod.Form.I18n.German
                     Yesod.Form.I18n.French
                     Yesod.Form.I18n.Norwegian
                     Yesod.Form.I18n.Japanese
                     -- FIXME Yesod.Helpers.Crud
    ghc-options:     -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends:          base
                          , yesod-form
                          , time
                          , hspec
                          , HUnit
                          , text

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
