name:            yesod-form
version:         1.6.7
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Form handling support for Yesod Web Framework
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-form>.  Third-party packages which you can find useful: <http://hackage.haskell.org/package/yesod-form-richtext yesod-form-richtext> - richtext form fields (currntly it provides only Summernote support).
extra-source-files: ChangeLog.md
                    README.md

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
    build-depends:   base                  >= 4        && < 5
                   , aeson
                   , attoparsec            >= 0.10
                   , blaze-builder         >= 0.2.1.4
                   , blaze-html            >= 0.5
                   , blaze-markup          >= 0.5.1
                   , byteable
                   , bytestring            >= 0.9.1.4
                   , containers            >= 0.2
                   , data-default
                   , email-validate        >= 1.0
                   , persistent
                   , resourcet
                   , semigroups
                   , shakespeare           >= 2.0
                   , text                  >= 0.9
                   , time                  >= 1.1.4
                   , transformers          >= 0.2.2
                   , wai                   >= 1.3
                   , xss-sanitize          >= 0.3.0.1
                   , yesod-core            >= 1.6      && < 1.7
                   , yesod-persistent      >= 1.6      && < 1.7

    if flag(network-uri)
      build-depends: network-uri >= 2.6

    exposed-modules: Yesod.Form
                     Yesod.Form.Types
                     Yesod.Form.Functions
                     Yesod.Form.Bootstrap3
                     Yesod.Form.Input
                     Yesod.Form.Fields
                     Yesod.Form.Jquery
                     Yesod.Form.Nic
                     Yesod.Form.MassInput
                     Yesod.Form.I18n.English
                     Yesod.Form.I18n.Portuguese
                     Yesod.Form.I18n.Swedish
                     Yesod.Form.I18n.German
                     Yesod.Form.I18n.French
                     Yesod.Form.I18n.Norwegian
                     Yesod.Form.I18n.Japanese
                     Yesod.Form.I18n.Czech
                     Yesod.Form.I18n.Russian
                     Yesod.Form.I18n.Dutch
                     Yesod.Form.I18n.Spanish
                     Yesod.Form.I18n.Chinese
                     Yesod.Form.I18n.Korean
                     -- FIXME Yesod.Helpers.Crud
    ghc-options:     -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends:          base
                          , yesod-form
                          , time
                          , hspec
                          , text

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
