name:            yesod-json
version:         0.3.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Generate content for Yesod using the aeson package.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Generate content for Yesod using the aeson package.

library
    build-depends:   base                  >= 4        && < 5
                   , yesod-core            >= 0.10.1   && < 0.11
                   , yesod-routes                         < 0.1
                   , aeson                 >= 0.5
                   , text                  >= 0.8      && < 1.0
                   , shakespeare-js        >= 0.11     && < 0.12
                   , vector                >= 0.9
                   , containers            >= 0.2
                   , blaze-builder
                   , attoparsec-conduit    >= 0.2      && < 0.3
                   , conduit               >= 0.2      && < 0.3
                   , transformers          >= 0.2.2    && < 0.3
                   , wai                   >= 1.1      && < 1.2
                   , wai-extra             >= 1.1      && < 1.2
                   , bytestring            >= 0.9      && < 0.10
                   , safe                  >= 0.2      && < 0.4
    exposed-modules: Yesod.Json
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
