name:            yesod-json
version:         1.1.2.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Generate content for Yesod using the aeson package.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Generate content for Yesod using the aeson package.

library
    build-depends:   base                  >= 4        && < 5
                   , yesod-core            >= 1.1
                   , yesod-routes          >= 1.1
                   , aeson                 >= 0.5
                   , text                  >= 0.8
                   , shakespeare-js        >= 1.0
                   , vector                >= 0.9
                   , containers            >= 0.2
                   , blaze-builder
                   , attoparsec-conduit    >= 0.5
                   , conduit               >= 0.5
                   , transformers          >= 0.2.2
                   , wai                   >= 1.3
                   , wai-extra             >= 1.3
                   , bytestring            >= 0.9
                   , safe                  >= 0.2
    exposed-modules: Yesod.Json
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
