name:            yesod-newsfeed
version:         1.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Helper functions and data types for producing News feeds.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Helper functions and data types for producing News feeds.

library
    build-depends:   base                 >= 4        && < 5
                   , yesod-core           >= 1.0      && < 1.1
                   , time                 >= 1.1.4
                   , hamlet               >= 1.0      && < 1.1
                   , bytestring           >= 0.9.1.4  && < 0.10
                   , text                 >= 0.9      && < 0.12
                   , xml-conduit          >= 0.7      && < 0.8
                   , blaze-html           >= 0.4      && < 0.5
    exposed-modules: Yesod.AtomFeed
                   , Yesod.RssFeed
                   , Yesod.Feed
    other-modules:   Yesod.FeedTypes
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
