name:            yesod-newsfeed
version:         1.1.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Helper functions and data types for producing News feeds.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     Helper functions and data types for producing News feeds.

library
    build-depends:   base                 >= 4        && < 5
                   , yesod-core           >= 1.1      && < 1.2
                   , time                 >= 1.1.4
                   , hamlet               >= 1.1      && < 1.2
                   , bytestring           >= 0.9.1.4
                   , text                 >= 0.9
                   , xml-conduit          >= 1.0
                   , blaze-html           >= 0.5
                   , blaze-markup         >= 0.5.1
                   , containers

    exposed-modules: Yesod.AtomFeed
                   , Yesod.RssFeed
                   , Yesod.Feed
    other-modules:   Yesod.FeedTypes
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
