name:            yesod-newsfeed
version:         1.7.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman, Patrick Brisbin
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Helper functions and data types for producing News feeds.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-newsfeed>
extra-source-files: README.md ChangeLog.md

library
    build-depends:   base                 >= 4        && < 5
                   , yesod-core           >= 1.6      && < 1.7
                   , time                 >= 1.1.4
                   , shakespeare          >= 2.0
                   , bytestring           >= 0.9.1.4
                   , text                 >= 0.9
                   , xml-conduit          >= 1.0
                   , blaze-html           >= 0.5
                   , blaze-markup         >= 0.5.1
                   , containers

    exposed-modules: Yesod.AtomFeed
                   , Yesod.RssFeed
                   , Yesod.Feed
    other-modules:   Yesod.FeedTypes
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
