cabal-version:   >= 1.10
name:            yesod-persistent
version:         1.6.0.8
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Some helpers for using Persistent from Yesod.
category:        Web, Yesod, Database
stability:       Stable
build-type:      Simple
homepage:        http://www.yesodweb.com/
description:     API docs and the README are available at <http://www.stackage.org/package/yesod-persistent>
extra-source-files: README.md ChangeLog.md

library
    default-language: Haskell2010
    build-depends:   base                      >= 4.10     && < 5
                   , yesod-core                >= 1.6      && < 1.7
                   , persistent                >= 2.8
                   , persistent-template       >= 2.1
                   , transformers              >= 0.2.2
                   , blaze-builder
                   , conduit
                   , resourcet                 >= 0.4.5
                   , resource-pool
    exposed-modules: Yesod.Persist
                     Yesod.Persist.Core
    ghc-options:     -Wall

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules: Yesod.PersistSpec
    build-depends: base
                 , hspec
                 , wai-extra
                 , yesod-core
                 , persistent-sqlite >= 2.8
                 , yesod-persistent
                 , conduit
                 , blaze-builder
                 , persistent
                 , text

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
