name:            yesod-platform
version:         1.2.13.2
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Meta package for Yesod
description:     Instead of allowing version ranges of dependencies, this package requires specific versions to avoid dependency hell
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/

library
    build-depends: base >= 4 && < 5
                 , SHA == 1.6.4.1
                 , ansi-terminal == 0.6.1.1
                 , ansi-wl-pprint == 0.6.7.1
                 , asn1-encoding == 0.8.1.3
                 , asn1-parse == 0.8.1
                 , asn1-types == 0.2.3
                 , attoparsec-conduit == 1.1.0
                 , authenticate == 1.3.2.10
                 , auto-update == 0.1.0.0
                 , base16-bytestring == 0.1.1.6
                 , base64-bytestring == 1.0.0.1
                 , blaze-builder == 0.3.3.2
                 , blaze-builder-conduit == 1.1.0
                 , blaze-html == 0.7.0.2
                 , blaze-markup == 0.6.1.0
                 , byteable == 0.1.1
                 , byteorder == 1.0.4
                 , cereal == 0.4.0.1
                 , cipher-aes == 0.2.8
                 , cipher-des == 0.0.6
                 , cipher-rc4 == 0.1.4
                 , clientsession == 0.9.0.3
                 , conduit == 1.1.7
                 , conduit-extra == 1.1.3
                 , connection == 0.2.3
                 , cookie == 0.4.1.2
                 , cprng-aes == 0.5.2
                 , crypto-api == 0.13
                 , crypto-cipher-types == 0.0.9
                 , crypto-numbers == 0.2.3
                 , crypto-pubkey == 0.2.4
                 , crypto-pubkey-types == 0.4.2.2
                 , crypto-random == 0.0.7
                 , cryptohash == 0.11.6
                 , cryptohash-conduit == 0.1.1
                 , css-text == 0.1.2.1
                 , data-default == 0.5.3
                 , data-default-class == 0.0.1
                 , data-default-instances-base == 0.0.1
                 , data-default-instances-containers == 0.0.1
                 , data-default-instances-dlist == 0.0.1
                 , data-default-instances-old-locale == 0.0.1
                 , dlist == 0.7.1
                 , email-validate == 2.0.1
                 , entropy == 0.3.2
                 , esqueleto == 1.4.4
                 , exceptions == 0.6.1
                 , fast-logger == 2.2.0
                 , file-embed == 0.0.7
                 , hamlet == 1.2.0
                 , hjsmin == 0.1.4.7
                 , hspec == 1.11.0
                 , hspec-expectations == 0.6.0.1
                 , html-conduit == 1.1.0.5
                 , http-client == 0.3.7.1
                 , http-client-tls == 0.2.2
                 , http-conduit == 2.1.4
                 , http-date == 0.0.4
                 , http-reverse-proxy == 0.4.0.1
                 , http-types == 0.8.5
                 , language-javascript == 0.5.13
                 , lifted-base == 0.2.3.0
                 , mime-mail == 0.4.5.2
                 , mime-types == 0.1.0.4
                 , mmorph == 1.0.3
                 , monad-control == 0.3.3.0
                 , monad-logger == 0.3.7.1
                 , monad-loops == 0.4.2.1
                 , nats == 0.2
                 , network-conduit == 1.1.0
                 , optparse-applicative == 0.9.1.1
                 , path-pieces == 0.1.4
                 , pem == 0.2.2
                 , persistent == 1.3.3
                 , persistent-template == 1.3.2.2
                 , publicsuffixlist == 0.1
                 , pwstore-fast == 2.4.1
                 , quickcheck-io == 0.1.1
                 , resource-pool == 0.2.3.0
                 , resourcet == 1.1.2.3
                 , safe == 0.3.7
                 , securemem == 0.1.3
                 , semigroups == 0.15.2
                 , setenv == 0.1.1.1
                 , shakespeare == 2.0.1.1
                 , shakespeare-css == 1.1.0
                 , shakespeare-i18n == 1.1.0
                 , shakespeare-js == 1.3.0
                 , shakespeare-text == 1.1.0
                 , silently == 1.2.4.1
                 , simple-sendfile == 0.2.15
                 , skein == 1.0.9
                 , socks == 0.5.4
                 , stm-chans == 3.0.0.2
                 , streaming-commons == 0.1.4.1
                 , stringsearch == 0.3.6.5
                 , system-fileio == 0.3.14
                 , system-filepath == 0.4.12
                 , tagged == 0.7.2
                 , tagsoup == 0.13.1
                 , tagstream-conduit == 0.5.5.1
                 , tf-random == 0.5
                 , tls == 1.2.8
                 , transformers-base == 0.4.2
                 , utf8-string == 0.3.8
                 , void == 0.6.1
                 , wai == 3.0.1.1
                 , wai-app-static == 3.0.0
                 , wai-extra == 3.0.1.2
                 , wai-logger == 2.2.0
                 , wai-test == 3.0.0
                 , warp == 3.0.0.5
                 , warp-tls == 3.0.0
                 , word8 == 0.1.1
                 , x509 == 1.4.11
                 , x509-store == 1.4.4
                 , x509-system == 1.4.5
                 , x509-validation == 1.5.0
                 , xml-conduit == 1.2.1
                 , xml-types == 0.3.4
                 , xss-sanitize == 0.3.5.3
                 , yaml == 0.8.8.4
                 , yesod == 1.2.6.1
                 , yesod-auth == 1.3.4.1
                 , yesod-auth-hashdb == 1.3.0.1
                 , yesod-core == 1.2.19
                 , yesod-form == 1.3.15.1
                 , yesod-persistent == 1.2.3
                 , yesod-routes == 1.2.0.7
                 , yesod-static == 1.2.4
                 , yesod-test == 1.2.3.2

    exposed-modules: Yesod.Platform

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
