name:            yesod-routes
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Efficient routing for Yesod.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/

library
    build-depends:   base                      >= 4        && < 5
                   , yesod-core                >= 0.9.3    && < 0.10
                   , text                      >= 0.5      && < 0.12
                   , vector                    >= 0.8      && < 0.10
                   , clientsession             >= 0.7      && < 0.8
                   , containers                >= 0.2      && < 0.5

    exposed-modules: Yesod.Routes.Dispatch
    ghc-options:     -Wall

test-suite runtests
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test

    type: exitcode-stdio-1.0
    build-depends: base                      >= 4.3      && < 5
                 , yesod-routes
                 , text                      >= 0.5      && < 0.12
                 , HUnit                     >= 1.2      && < 1.3
                 , hspec                     >= 0.6      && < 0.10
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/yesod.git
