name:            yesod-routes
version:         0.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Efficient routing for Yesod.
description:     Provides an efficient routing system, a parser and TH code generation.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/

library
    build-depends:   base                      >= 4        && < 5
                   , text                      >= 0.5      && < 0.12
                   , vector                    >= 0.8      && < 0.10
                   , containers                >= 0.2      && < 0.5
                   , template-haskell
                   , path-pieces               >= 0.1      && < 0.2

    exposed-modules: Yesod.Routes.Dispatch
                     Yesod.Routes.TH
                     Yesod.Routes.Class
                     Yesod.Routes.Parse
                     Yesod.Routes.Overlap
    other-modules:   Yesod.Routes.TH.Dispatch
                     Yesod.Routes.TH.RenderRoute
                     Yesod.Routes.TH.Types
    ghc-options:     -Wall

test-suite runtests
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test

    build-depends: base                      >= 4.3      && < 5
                 , yesod-routes
                 , text                      >= 0.5      && < 0.12
                 , HUnit                     >= 1.2      && < 1.3
                 , hspec                     >= 0.6      && < 0.10
                 , containers
                 , template-haskell
                 , path-pieces
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
